Mon Feb 11 15:11:31 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSString.m (NSImmutableString): Implemented copy,
	copyWithZone:, mutableCopy, mutableCopyWithZone:, so that the
	string can be copied, and the copy no longer tracks the parent.

2002-02-10  Michael Hanni <mhanni@sprintmail.com>

        * Source/NSObjCRuntime.m: changed NSAssert() to NSCAssert() from
        last change. Also added NSException.h include to make compile
        correctly and quietly.

2002-02-10  Manuel Guesdon <mguesdon@orange-concept.com>

	* Source/NSObject.m: changes to enable derived object KeyValueCoding 
		process chnages (EOGenericRecord for example).
               o added:
                _infoForInstanceVariableNamed:retType:retSize:retOffset:
                _getValueForKey:selector:type:size:offset:
                _setValueForKey:object:selector:type:size:offset:
                _handleQueryWithUnboundKey:
                _handleTakeValue:forUnboundKey:
               o modified:
                storedValueForKey:
                takeStoredValue:forKey:
                valueForKey:
                takeValue:forKey:
                To use added method.
        * Source/NSObjCRuntime.m:
               o added NSAssert in GSGetInstanceVariable() and 
                 GSSetInstanceVariable()
	* Headers/gnustep/base/NSKeyValueCoding: 
               o added:
                _infoForInstanceVariableNamed:retType:retSize:retOffset:
                _getValueForKey:selector:type:size:offset:
                _setValueForKey:object:selector:type:size:offset:
                _handleQueryWithUnboundKey:
                _handleTakeValue:forUnboundKey:

Sat Feb  9 01:45:48 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBundle.m ([+bundleForTool:]): Removed.  We switch to a
	better API, which is to have a tool use +mainBundle, in the same
	way as applications do, to retrieve the main resource bundle for
	itself.
	([+mainBundle]): Modified to support tools as well as